# libstatgrab

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  PLATFORMS  README  README.CVS  README.git  README.md  TESTING  TODO  acinclude.m4  autogen.sh  configure.ac  configure.in  libstatgrab-examples.properties  libstatgrab.pc.in  saidar.properties  saidar.properties.in  statgrab.properties.in
docs/: Makefile.am  cpu.txt  cpu_percent_usage.xml  diskio.txt  get_diskio_stats.xml  get_general_stats.xml  get_load_stats.xml  get_network_iface_stats.xml  get_network_stats.xml  get_page_stats.xml  get_process_stats.xml  get_user_stats.xml  load_average.txt  network.txt  os_stats.txt  page_stat.txt  process_stats.txt  sg_get_cpu_stats.xml  sg_get_disk_io_stats.xml  sg_get_fs_stats.xml  sg_get_host_info.xml  sg_get_load_stats.xml  sg_get_mem_stats.xml  sg_get_network_iface_stats.xml  sg_get_network_io_stats.xml  sg_get_page_stats.xml  sg_get_process_stats.xml  sg_get_user_stats.xml  statgrab.xml  user_list.txt  vm_stats.txt
docs/libstatgrab/: Makefile.am  sg_comp_init.xml  sg_get_cpu_stats.xml  sg_get_disk_io_stats.xml  sg_get_error.xml  sg_get_fs_stats.xml  sg_get_host_info.xml  sg_get_load_stats.xml  sg_get_mem_stats.xml  sg_get_network_iface_stats.xml  sg_get_network_io_stats.xml  sg_get_page_stats.xml  sg_get_process_stats.xml  sg_get_user_stats.xml  sg_init.xml  sg_internal-intro.xml  sg_intro.xml  sg_lock_mutex.xml  sg_set_error.xml  sg_vector_create.xml  statgrab.xml
docs/saidar/: Makefile.am  saidar.xml
docs/statgrab/: Makefile.am  statgrab-make-mrtg-config.xml  statgrab-make-mrtg-index.xml  statgrab.xml
examples/: Makefile.am  cpu_usage.c  disk_traffic.c  filesys_snapshot.c  helpers.c  helpers.h  load_stats.c  network_iface_stats.c  network_traffic.c  os_info.c  page_stats.c  process_snapshot.c  process_stats.c  user_list.c  valid_filesystems.c  vm_stats.c
extras/python/: setup.py  statgrab.pyx
m4/: acx_lib.m4  acx_ncurses.m4  acx_perl5.m4  acx_visibility.m4  acx_xopen.m4  ax_lib.m4  ax_ncurses.m4  ax_perl5.m4  ax_pthread.m4  ax_shellvars.m4  ax_type_fmt.m4  ax_types.m4  ax_visibility.m4  ax_win32.m4  ax_xopen.m4  lib-link.m4
src/: Makefile.am
src/libstatgrab/: Makefile.am  cpu_stats.c  disk_stats.c  error.c  error.h  globals.c  globals.h  load_stats.c  memory_stats.c  network_stats.c  os_info.c  page_stats.c  process_stats.c  statgrab.h  statgrab.h.in  statgrab_deprecated.c  statgrab_deprecated.h  swap_stats.c  tools.c  tools.h  trace.h  user_stats.c  vector.c  vector.h  win32.c  win32.h
src/saidar/: Makefile.am  saidar.c
src/sgps/: Makefile.am  sgps.c
src/statgrab/: Makefile.am  statgrab-make-mrtg-config.in  statgrab-make-mrtg-index.in  statgrab.c
tests/: Makefile.am
tests/multi_threaded/: Makefile.am  diff_stats.c  full_stats.c  libstatgrab-test.properties  multi_threaded_test.c  run_tests.synopsis.in
tests/single_threaded/: Makefile.am  diff_stats.c  full_stats.c  libstatgrab-test.properties  run_tests.synopsis.in  single_threaded_test.c
tests/testlib/: Makefile.am  err.c  log.c  mix_tests.pm  mk_run_tests.pl  opt.c  routines.c  run_tests.pm  run_tests.t.in  testlib.h
